--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,22 @@ h1 {
 	line-height: 1.1;
 	/* color: rgb(10, 10, 10); */
 }
+
+button {
+	padding: .8rem 2rem;
+	background: rgba(255, 255, 255, .1);
+	border: 2px solid rgba(255, 255, 255, .7) !important;
+	cursor: pointer;
+	border-style: none;
+	border-radius: 8px;
+	transition: all .3s ease;
+}
+
+button:hover, button:focus {
+	background-color: rgba(255, 255, 255, .2);
+	border-color: rgba(255, 255, 255, .9);
+}
+
 /* 
 button {
   border-radius: 8px;
