--- a/src/styles/Accounts.scss
+++ b/src/styles/Accounts.scss
@@ -7,11 +7,12 @@
 
 	.accountContainer {
 		height: 80%;
+		max-height: max-content;
 		width: min(500px, 90%);
 		border: 3px solid rgba(white, 0.3);
 		border-radius: 8px;
 
-		// padding: 3rem;
+		padding: 1rem 0;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
