--- a/src/styles/Journal.scss
+++ b/src/styles/Journal.scss
@@ -68,4 +68,11 @@
 			border-color: white !important;
 		}
 	}
+
+	.loginBlock {
+		font-size: 20px;
+		font-weight: 600;
+
+		color: rgb(149, 41, 20);
+	}
 }
