--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,12 @@ body {
 	/* min-height: 100vh; */
 }
 
+body {
+	/* ! VERY DANGEROUS */
+	overflow-x: hidden;
+	/* ! HIGHLY AVOID */
+}
+
 h1 {
 	font-size: 3.2em;
 	line-height: 1.1;
@@ -334,3 +340,4 @@ button.doubleBtn:hover::after {
 .noMobileTapHighlight:focus {
 	outline: none !important;
 }
+
