add journal delete (pending)

--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -11,3 +11,5 @@ $checkbox-border: rgb(58, 66, 81);
 $checkbox-border-hover: rgb(70, 80, 99);
 
 $info_div_bg: rgb(181, 57, 57);
+
+$brown: rgb(149, 41, 20); 
