--- a/src/styles/Accounts.scss
+++ b/src/styles/Accounts.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding-top: 3rem;
+	// padding-top: 3rem;
 
 	.accountContainer {
 		height: 80%;
