--- a/src/styles/AddJournalEntry.scss
+++ b/src/styles/AddJournalEntry.scss
@@ -11,6 +11,43 @@
 		right: 1.5rem;
 	}
 
+	.topBar {
+		width: 90vw;
+		margin: 0 auto;
+		padding: 0.5rem 1rem;
+		border: 3px solid rgba(white, 0.3);
+		border-color: rgba(white, 0.3) rgba(white, 0.3) transparent rgba(white, 0.3);
+		border-radius: 8px 8px 0 0;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+
+		.edit {
+			font-weight: 600;
+		}
+
+		.delete {
+			// border: none ;
+			background: none;
+			// background-color: none;
+			// background-size: 0;  
+			margin: 0 0 0 1rem !important;
+			padding: .5rem;
+			// border-radius: 50%;
+			// margin: auto 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			&:hover {
+				background-color: rgba(red, .08);
+				color: rgb(218, 3, 3);
+			}
+
+		}
+	
+	}
+
 	.editorToolbar {
 		height: auto;
 		width: 90vw;
@@ -77,7 +114,6 @@ input.titleInput {
 	border: 3px solid rgba(white, 0.3);
 	color: black;
 	border-color: rgba(white, 0.3) rgba(white, 0.3) transparent rgba(white, 0.3);
-	border-radius: 8px 8px 0 0;
 
 	&::placeholder {
 		color: rgba(black, 0.6);
