added journal entry reaction, title tags

--- a/src/styles/AddJournalEntry.scss
+++ b/src/styles/AddJournalEntry.scss
@@ -1,3 +1,5 @@
+@import "Colors.scss";
+
 .out {
 	margin-top: 9rem;
 }
@@ -12,6 +14,9 @@
 	}
 
 	.topBar {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		width: 90vw;
 		margin: 0 auto;
 		padding: 0.5rem 1rem;
@@ -21,6 +26,19 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
+		gap: 1rem;
+
+		.mood {
+			border: 3px solid rgba(white, 0.6);
+			border-radius: 8px;
+			padding: 0.7rem;
+			display: flex;
+			justify-content: center;
+
+			&.edit {
+				cursor: pointer;
+			}
+		}
 
 		.edit {
 			font-weight: 600;
@@ -30,9 +48,9 @@
 			// border: none ;
 			background: none;
 			// background-color: none;
-			// background-size: 0;  
-			margin: 0 0 0 1rem !important;
-			padding: .5rem;
+			// background-size: 0;
+			// margin: 0 0 0 1rem !important;
+			padding: 0.5rem;
 			// border-radius: 50%;
 			// margin: auto 0;
 			display: flex;
@@ -40,12 +58,10 @@
 			align-items: center;
 
 			&:hover {
-				background-color: rgba(red, .08);
+				background-color: rgba(red, 0.08);
 				color: rgb(218, 3, 3);
 			}
-
 		}
-	
 	}
 
 	.editorToolbar {
@@ -176,4 +192,110 @@ input.titleInput {
 	font-weight: 600;
 
 	color: rgb(149, 41, 20);
+}
+
+// !
+
+
+.mood {
+	position: relative;
+	display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content {
+	display: none;
+	padding: 1rem;
+	margin: 0;
+	position: absolute;
+	top: 50px;
+	grid-template-columns: repeat(5, 1fr);
+	/* grid-template-rows: repeat(3, 1fr); */
+	/* grid-auto-columns: minmax(0, 1fr); */
+	grid-auto-flow: row;
+	// grid-column-gap: 15px;
+	/* grid-row-gap: 15px; */
+	/* background-color: rgb(236, 197, 172); */
+	background-color: #efa96c;
+	border: 3px solid #ffe8d5;
+	border-radius: 8px;
+	width: max(350px, 80%);
+	height: 140px;
+	z-index: 2;
+	transition: all 0.3s ease;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.dropdown-content.show {
+	display: grid;
+	top: 2.5rem;
+}
+
+
+// !
+
+.dropdown-content .item {
+	font-size: 12px;
+	display: flex;
+	flex-direction: column;
+}
+
+.dropdown-content .icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 80% !important;
+}
+
+.dropdown-content .icon svg {
+	size: 30px !important;
+}
+
+.dropdown-content .name {
+	max-height: 20px;
+	max-width: 70px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	transition: max-height 0.35s cubic-bezier(0, 1.2, 0, 1.05);
+}
+
+.dropdown-content div.item:hover .name {
+	max-height: 40px;
+	white-space: pre-wrap;
+	overflow: visible;
+}
+
+/* .nav-items-container .dropdown-content-item div.moods-icon .dropdown-content.open {
+	display: grid;
+	z-index: 2;
+	height: 200px;
+} */
+
+.dropdown-content div.item {
+	cursor: pointer;
+	/* background-color: rgba(200,200,200, .2); */
+	word-break: break-word;
+	transition: all 0.3s ease;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+
+	& span.icon svg {
+		color: darken($brown, 10);
+	}
+
+}
+
+.dropdown-content div:hover {
+	background-color: rgba(255, 255, 255, 0.3);
 }
