--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -361,14 +361,14 @@ input {
 
 	/* MOBILE NAVIGATION */
 
-	.nav-items-container ul {
+	/* .nav-items-container ul {
 		min-width: 90% !important;
 		margin: 0 auto;
 	}
 
 	.nav-items-container .name {
 		width: 100%;
-	}
+	} */
 }
 
 /* 
