--- a/src/index.css
+++ b/src/index.css
@@ -56,19 +56,21 @@ h1 {
 
 button:not(.mainBtn),
 button:not(.doubleBtn) {
-	padding: .8rem 2rem;
-	background: rgba(255, 255, 255, .1);
+	padding: 0.8rem 2rem;
+	background: rgba(255, 255, 255, 0.1);
 	border-style: none;
-	border: 2px solid rgba(255, 255, 255, .7);
+	border: 2px solid rgba(255, 255, 255, 0.7);
 	cursor: pointer;
 	border-radius: 8px;
-	transition: all .3s ease;
+	transition: all 0.3s ease;
 }
 
-button:not(.mainBtn):hover, button:not(.mainBtn):focus,
-button:not(.doubleBtn):hover, button:not(.doubleBtn):focus {
-	background-color: rgba(255, 255, 255, .2);
-	border-color: rgba(255, 255, 255, .9);
+button:not(.mainBtn):hover,
+button:not(.mainBtn):focus,
+button:not(.doubleBtn):hover,
+button:not(.doubleBtn):focus {
+	background-color: rgba(255, 255, 255, 0.2);
+	border-color: rgba(255, 255, 255, 0.9);
 }
 
 /* 
@@ -341,3 +343,9 @@ button.doubleBtn:hover::after {
 	outline: none !important;
 }
 
+.brownText {
+	font-size: 20px;
+	font-weight: 600;
+
+	color: rgb(149, 41, 20);
+}
