--- a/src/styles/MoodTracker.scss
+++ b/src/styles/MoodTracker.scss
@@ -23,10 +23,10 @@
         .close {
             position: relative;
             height: 100% !important;
-            background-color: red;
+            // background-color: red;
             padding: .8rem ;
             cursor: pointer;
-            // border-radius: 4px;
+            border-radius: 4px;
 
             &:hover {
                 background-color: rgba(black, .2);
