add go back button from new journal to journal page

--- a/src/styles/AddJournalEntry.scss
+++ b/src/styles/AddJournalEntry.scss
@@ -7,6 +7,12 @@
 .addNew {
 	margin-top: 3rem;
 
+	.goBack {
+		margin-bottom: 1rem;
+		float: left;
+		margin-left: 3rem;
+	}
+
 	.saveEntry {
 		position: fixed;
 		bottom: 1.5rem;
