--- a/src/styles/AddJournalEntry.scss
+++ b/src/styles/AddJournalEntry.scss
@@ -7,12 +7,18 @@
 .addNew {
 	margin-top: 3rem;
 
-	.goBack {
-		margin-bottom: 1rem;
-		float: left;
-		margin-left: 3rem;
-	}
+	.backContainer {
+		width: 100vw;
+		display: flex;
+		justify-content: left;
+		margin-bottom: 2rem;
 
+		.goBack {
+			margin-left: 1.25rem;
+		}
+
+	}
+	
 	.saveEntry {
 		position: fixed;
 		bottom: 1.5rem;
