--- a/src/styles/AddJournalEntry.scss
+++ b/src/styles/AddJournalEntry.scss
@@ -4,6 +4,48 @@
 	margin-top: 9rem;
 }
 
+input[type=checkbox]{
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+label {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 60px;
+	height: 30px;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+label:after {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	width: 25px;
+	height: 25px;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background: #0626a3;
+}
+
+input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 25px;
+}
+
 .addNew {
 	margin-top: 3rem;
 
@@ -39,6 +81,20 @@
 		align-items: center;
 		justify-content: flex-end;
 		gap: 1rem;
+
+		.geminiEnable {
+			cursor: pointer;
+			display: flex;
+			gap: .2rem;
+			margin: 0 .5rem;
+			justify-content: center;
+			align-items: center;
+
+			span {
+				font-size: large;
+				font-weight: 600;
+			}
+		}
 
 		.mood {
 			border: 3px solid rgba(white, 0.6);
@@ -314,4 +370,32 @@ input.titleInput {
 
 .dropdown-content div:hover {
 	background-color: rgba(255, 255, 255, 0.3);
+}
+
+
+.geminiResponse {
+	width: 90vw;
+	margin: 2rem auto;
+	min-height: 300px;
+	max-height: max-content;
+	padding: 1rem;
+
+	border: 2px solid white;
+	border-radius: 8px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 2rem;
+
+	.niyaSays {
+		font-weight: 600;
+		font-size: x-large;
+	}
+
+	.response {
+		text-align: left;
+		font-size: large;
+	}
 }
